--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(geotagging)
+project(img_geotagger)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
