--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>img_geotagger</name>
   <version>0.0.0</version>
-  <description>The geotagging package</description>
+  <description>The img_geotagger package</description>
   <maintainer email="sentiv@todo.todo">sentiv</maintainer>
   <license>TODO</license>
 
